tests/errors/binary_operator_spaces.php
<?php

declare(strict_types=1);

function hello(int $a): void
{
}

hello(1 | 2 | 3);
